Poprawa dokumentacji
